# sbot

./: .dockerignore
solana-sniper-bot/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
solana-sniper-bot/scripts/: run.sh  stop.sh
solana-sniper-bot/src/: dex_monitor.rs  lib.rs  telegram.rs  websocket_monitor.rs
