[package]
name = "solana-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.2"
futures-util = "0.3"
url = "2.4"
bs58 = "0.5"
bincode = "1.3"

[[bin]]
name = "solana-sniper-bot"
path = "src/main.rs"

[[bin]]
name = "create-wallets"
path = "src/bin/create_wallets.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
